tests/negative/import_no_exit_cycle1.toit
// Copyright (C) 2019 Toitware ApS. All rights reserved.

import .no_exit_test
export *
